# navegation-ros

./: README.md  requirements.sh
catkin_ws/devel/: .catkin  _setup_util.py  local_setup.sh
catkin_ws/src/async_web_server_cpp/: CMakeLists.txt
catkin_ws/src/neo_simulation/: simulation.launch
catkin_ws/src/robot_nav/: CMakeLists.txt  package.xml
catkin_ws/src/robot_nav/configs/controller/: wheel_controller.yaml
catkin_ws/src/robot_nav/configs/controller/launch/: controller_utils.launch
catkin_ws/src/robot_nav/configs/imu/: imu.launch
catkin_ws/src/robot_nav/configs/imu/phidgets/: phidgets_imu.launch
catkin_ws/src/robot_nav/configs/kinematics/: kinematics.launch  kinematics.yaml
catkin_ws/src/robot_nav/configs/lidar/: lidar.launch
catkin_ws/src/robot_nav/configs/lidar/sick/s300/: s300_1.yaml  s300_2.yaml  sick_s300.launch
catkin_ws/src/robot_nav/configs/navigation/amcl/: README.md  amcl_basic.launch  amcl_basic.yaml
catkin_ws/src/robot_nav/configs/navigation/gmapping/: README.md  gmapping_basic.launch  gmapping_basic.yaml
catkin_ws/src/robot_nav/configs/navigation/maps/: your_map_name.pgm  your_map_name.yaml
catkin_ws/src/robot_nav/configs/navigation/move_base/: README.md  move_base.launch
catkin_ws/src/robot_nav/configs/navigation/move_base/costmaps/: costmap_common.yaml  costmap_local.yaml
catkin_ws/src/robot_nav/configs/navigation/move_base/global_planner/NavFnROS/: navfnros_planner.yaml
catkin_ws/src/robot_nav/configs/navigation/move_base/local_planner/dwa_local_planner/: dwa_planner.yaml
catkin_ws/src/robot_nav/configs/navigation/move_base/local_planner/eband_local_planner/: eband_planner.yaml
catkin_ws/src/robot_nav/configs/navigation/move_base/local_planner/teb_local_planner/: costmap_converter_params.yaml  teb_planner.yaml
catkin_ws/src/robot_nav/configs/navigation/move_base/local_planner/trajectory_local_planner/: trajectory_planner.yaml
catkin_ws/src/robot_nav/configs/navigation/move_base/move_base/: README.md
catkin_ws/src/robot_nav/configs/relayboard_v2/: relayboard_v2.launch
catkin_ws/src/robot_nav/configs/sensor_fusion/robot_localization/: robot_localization.launch  robot_localization_ukf.yaml
catkin_ws/src/robot_nav/configs/teleop/: teleop.launch
catkin_ws/src/robot_nav/launch/: bringup.launch  display_robot_model.launch  navigation_basic_amcl.launch  navigation_basic_neo.launch  navigation_basic_slam.launch  play_ros_bag.launch  publisher.launch  rosbridge.launch  rviz.launch  rviz_navigation.launch  web.launch
catkin_ws/src/robot_nav/robot_model/: mpo_500.urdf.xacro
catkin_ws/src/robot_nav/robot_model/urdf/mpo_500_xacros/: cabinet.xacro  micro_scan.xacro  omni_wheel.xacro  sick_laser.xacro
catkin_ws/src/robot_nav/robots/: robot.urdf.xacro
catkin_ws/src/robot_nav/robots/xacros/: body.xacro  micro_scan.xacro  omni_wheel.xacro  sick_S300.xacro  sick_laser.xacro
catkin_ws/src/robot_nav/scripts/: navigation_goals.cpp  rotate_robot.py  setup.py
catkin_ws/src/robot_nav/src/: index.html  main.js  move_robot.py  param.py  send_goal.py  server.py
catkin_ws/src/robot_nav/srv/: goal.srv
catkin_ws/src/robot_nav/test/: setup.py  test_cmd.py
(+69 files in other folders)
