<?xml version="1.0"?>
<package>
  <name>robot_nav</name>
  <version>0.1.0</version>
  <description>The robot_nav package</description>

	<author email="nicolasalangrotti03@gmail.com.com">Nicolas Alan</author>	

  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
