<?xml version="2.0"?>
<package>
  <name>robot_nav</name>
  <version>0.1.0</version>
  <description>The robot_nav package</description>

	<maintainer email="ros@neobotix.de">Neobotix</maintainer>
  <license>BSD</license>
  <!--<url type="website">http://www.neobotix-robots.com</url>--> 
	<!--<author email="harshasonyy@gmail.com">harsha_nagaraja</author> -->	

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_export_depend>genmsgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>srv</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>tf</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
